Fix for menu in dark mode

--- a/website/src/app.pcss
+++ b/website/src/app.pcss
@@ -15,6 +15,13 @@ html.dark {
 	body {
 		color: #000;
 		color-scheme: auto;
+	}
+
+	body > div {
+		background-color: #060504 !important;
+	}
+
+	body > div > * {
 		@apply invert hue-rotate-180;
 	}
 
